dfgen. use JPG_DIR not JPEG_DIR

--- a/nbs/Predictions.ipynb
+++ b/nbs/Predictions.ipynb
@@ -80,7 +80,7 @@
    "source": [
     "ROOT=f'{DATA_ROOT}/{DATA_DIR}'\n",
     "WEIGHT_DIR=f'{WEIGHT_ROOT}/{DATA_DIR}'\n",
-    "JPEG_DIR = os.path.join(ROOT, 'train-jpg')\n",
+    "JPG_DIR = os.path.join(ROOT, 'train-jpg')\n",
     "TIF_DIR = os.path.join(ROOT, 'train-tif')"
    ]
   },
@@ -254,7 +254,7 @@
     "#\n",
     "def _run_random(model_obj):\n",
     "    loss, eq, im_name, _ = predict_random(model_obj)\n",
-    "    impath=f'{JPEG_DIR}/{im_name}.jpg'\n",
+    "    impath=f'{JPG_DIR}/{im_name}.jpg'\n",
     "    title=f'\\nEQ:{eq}, LOSS: {loss}'\n",
     "    im=io.imread(impath)\n",
     "    return title, im\n",
