--- a/nbs/VGGARCH.ipynb
+++ b/nbs/VGGARCH.ipynb
@@ -75,7 +75,7 @@
    "source": [
     "ROOT=f'{DATA_ROOT}/{DATA_DIR}'\n",
     "WEIGHT_DIR=f'{WEIGHT_ROOT}/{DATA_DIR}'\n",
-    "JPEG_DIR = os.path.join(ROOT, 'train-jpg')\n",
+    "JPG_DIR = os.path.join(ROOT, 'train-jpg')\n",
     "TIF_DIR = os.path.join(ROOT, 'train-tif')"
    ]
   },
