--- a/nbs/VGGLIKE1.ipynb
+++ b/nbs/VGGLIKE1.ipynb
@@ -61,7 +61,7 @@
    "outputs": [],
    "source": [
     "ROOT=f'{DATA_ROOT}/{DATA_DIR}'\n",
-    "JPEG_DIR = os.path.join(ROOT, 'train-jpg')\n",
+    "JPG_DIR = os.path.join(ROOT, 'train-jpg')\n",
     "TIF_DIR = os.path.join(ROOT, 'train-tif')"
    ]
   },
