--- a/nbs/DummyModel.ipynb
+++ b/nbs/DummyModel.ipynb
@@ -84,7 +84,7 @@
    "outputs": [],
    "source": [
     "ROOT=f'{DATA_ROOT}/{DATA_DIR}'\n",
-    "JPEG_DIR = os.path.join(ROOT, 'train-jpg')\n",
+    "JPG_DIR = os.path.join(ROOT, 'train-jpg')\n",
     "TIF_DIR = os.path.join(ROOT, 'train-tif')\n",
     "LABEL_CSV = os.path.join(ROOT, 'train.csv')"
    ]
